# nit-app

./: .env.example  .gitignore  TZ_Feed_ProfileCompleteness.txt  docker-compose.yml  nit_spec_v3.md  pyproject.toml
.github/workflows/: keep-warm.yml
backend/: Dockerfile  alembic.ini  start.sh
backend/api/: main.py
backend/api/middleware/: auth.py  input_sanitizer.py  rate_limit.py
backend/api/routers/: admin.py  auth.py  chat.py  feed.py  feedback.py  match_chat.py  matches.py  people.py  profile.py  views.py  voice.py
backend/bot/: main.py  setup.py
backend/bot/routers/: checkin.py  notifications.py  settings.py  start.py
backend/core/: config.py  redis.py  storage.py  telegram.py
backend/db/: connection.py  seed_questions.py
backend/db/migrations/: env.py
backend/modules/ai/: client.py  compatibility.py  embeddings.py  interviewer.py  personality.py  reflection.py  safety.py
backend/modules/matching/: runner.py  scorer.py  selector.py
backend/modules/moderation/: admin_bot.py  chat_filter.py  photo.py
backend/modules/users/: models.py  repository.py
backend/scripts/: set_admin.py
backend/workers/: main.py  moderation_worker.py
backend/workers/tasks/: analyze_match_chat.py  bot_editor.py  check_chat_deadline.py  check_saved_profiles.py  filter_message.py  generate_date_prep.py  generate_embedding.py  generate_match_explanation.py  (+6 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
remotion/: README.md  package-lock.json  package.json  tsconfig.json
remotion/src/: NitDemo.tsx  NitGif.tsx  Root.tsx
(+36 files in other folders)
